# doxx

./: .cursorrules  .dockerignore  .env.example  .gitignore  ARCHITECTURE_MAP.md  BUILD_PLAN.md  CODE_STANDARDS.md  DEV_WORKFLOW.md  Dockerfile  OWNERSHIP_MAP.md  PLAN.md  PROJECT.md  README.md  _fix_reconcile.py  ai-context.md  alembic.ini  cursor-prompts.md  deep-research-report (1).md  deep-research-report.md  docker-compose.cloud.yml  docker-compose.yml  doxx_scraper_fields_for_crm.xlsx  env.example  env.structure  moscraper_migration_pack.md  mvp-context.md  product-context.md  project-context.md  pyproject.toml  scraper.mdc  scraper_db_schema_for_crm.xlsx  scraper_qa_databases_export.xlsx  scrapy.cfg
.cursor/: mcp.example.json  mcp.json
.cursor/.rules/: documentation-governance.mdc  readme-sync.mdc  scraper.mdc
.github/workflows/: ci.yaml
CRM context/: architecture.mdc  crm.mdc
application/: crm_client.py  crm_sync_builder.py  delta_detector.py  event_sender.py  message_builder.py  parse_orchestrator.py
application/dev/: __init__.py  debug_summary.py  dev_run.py  fixture_replay.py  local_smoke.py
application/extractors/: __init__.py  llm_extractor.py  patterns.py  regex_extractor.py  spec_alias_registry.py  spec_confidence.py  spec_conflicts.py  spec_coverage.py  spec_extractor.py  spec_label_normalizer.py  spec_mapper.py  spec_quality.py  spec_registry.py  spec_registry_appliance.py  spec_registry_common.py  spec_registry_laptop.py  spec_registry_loader.py  spec_registry_phone.py  spec_registry_stores.py  spec_registry_tablet.py  spec_registry_tv.py  spec_registry_unknown.py  spec_resolution.py  spec_sanity.py  spec_warning_codes.py  structured_extractor.py  unit_normalizer.py
application/go_live/: __init__.py  cutover_checklist.py  exit_criteria_registry.py  go_live_policy.py  launch_report.py  rollback_triggers.py  stabilization_plan.py
application/governance/: __init__.py  anti_patterns.py  architecture_lint.py  code_placement.py  dependency_policy.py  docs_governance.py  knowledge_continuity.py  maintainability_report.py
application/ingestion/: __init__.py  event_builder.py  fingerprints.py  persistence_service.py
application/lifecycle/: __init__.py  apply_result_classifier.py  catalog_precheck.py  delta_downgrade.py  idempotency.py  lifecycle_builder.py  lifecycle_policy.py  reconciliation.py  replay_policy.py
application/normalization/: category_inference.py  light_normalizer.py  price_normalization.py
application/performance/: __init__.py  backpressure_policy.py  concurrency_policy.py  cost_degradation_advisor.py  efficiency_baseline.py  graceful_degradation.py  perf_regression_checker.py  profiling_report.py
application/publisher/: __init__.py  run.py  service.py
application/qa/: __init__.py  run_store_acceptance.py
application/readiness/: __init__.py  check_readiness.py  evidence_collector.py  gap_assessor.py  phase_policy.py  prioritization.py  readiness_policy.py  readiness_registry.py  readiness_report.py  roadmap_dependencies.py  roadmap_planner.py  roadmap_report.py
application/release/: __init__.py  antiban_rollout.py  canary_selector.py  compatibility_checker.py  compatibility_logger.py  (+16 more)
config/: feature_flags.py  processor_aliases.json  scrapy_settings.py  settings.py  store_resource_budgets.py
docs/: README.md  antiban_rollout.md  crm_ai_iterative_rabbitmq_prompt.md  crm_final_flow_handoff.md  crm_integration.md  crm_rabbitmq_integration_guide.md  final_ingestion_flow.md  fixtures_and_acceptance.md  go_live_policy.md  implementation_roadmap.md  ingestion_architecture.md  message_example_v1.json  mvp-scope.md  new_scraper_architecture.md  onboarding.md  production_readiness.md  publisher_service.md  rabbitmq_crm_integration.md  release_process.md  scraper_db_schema.md  store_migration_matrix.md  store_playbook_template.md  supabase_deployment.md  support_triage.md
domain/: codebase_governance.py  compatibility.py  cost_efficiency.py  crm_apply_result.py  crm_lifecycle.py  crm_replay.py  crm_sync.py  data_governance.py  developer_experience.py  events.py  go_live.py  implementation_roadmap.py  message.py  messages.py  network_security.py  normalization_quality.py  normalized_product.py  observability.py  operational_policy.py  operator_support.py  parser_event.py  performance.py  production_readiness.py  project_ownership.py  publication_event.py  raw_product.py  release_quality.py  resource_governance.py  rollout_policy.py  scrape_fingerprints.py  scraped_product.py  security.py  stock_normalization.py  typed_specs.py
scripts/: __init__.py  apply_supabase_functions.py  bootstrap_rabbitmq.py  bootstrap_scraper_db.py  check_readiness.py  crm_short_crawl.py  dev_run.py  export_scraper_db_schema_for_crm.py  export_scraper_dbs_to_xlsx.py  export_scraper_fields_inventory.py  full_crawl_all_stores_fake_crm.ps1  local_smoke.py  mediapark_items.json  rabbit_smoke.py  replay_outbox.py  run_db_migrations.py  run_store_acceptance.py  start_fake_crm_and_crawl.ps1
tasks/: celery_app.py  event_tasks.py  parse_tasks.py
tests/: TEST_STRATEGY.md  conftest.py
(+557 files in other folders)
