[project]
name = "uz-tech-scraper"
version = "0.1.0"
description = "Tech product scraper for Uzbekistan e-commerce"
authors = [
    {name = "UmidYul", email = "yumid253@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "brotlicffi>=1.2.0",
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.33",
    "scrapy-redis>=0.7",
    "scrapy-rotating-proxies>=0.6",
    "playwright-stealth>=1.0",
    "fake-useragent>=1.4",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "supabase>=2.0.0,<2.19",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "flashtext>=2.7",
    "anthropic>=0.23",
    "rembg>=2.0",
    "open-clip-torch>=2.24",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "sentry-sdk[celery]>=1.40",
]


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "config*", "domain*", "infrastructure*", "tasks*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "fakeredis>=2.21",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
