[project]
name = "moscraper"
version = "0.1.0"
description = "Stateless Scrapy publisher: listings → RabbitMQ (CloudEvents)"
authors = [
    {name = "UmidYul", email = "yumid253@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "brotlicffi>=1.2.0",
    "scrapy>=2.11",
    "scrapy-rotating-proxies>=0.6",
    "playwright-stealth>=1.0",
    "fake-useragent>=1.4",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aio-pika>=9.4",
    "orjson>=3.9",
    "flashtext>=2.7",
    "sentry-sdk>=1.40",
]

[project.optional-dependencies]
# Use only for spiders that need a real browser (SPA / heavy JS).
# Install: pip install '.[playwright]' then playwright install
playwright = ["scrapy-playwright>=0.0.33"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "config*", "domain*", "infrastructure*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pika>=1.3",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: live RabbitMQ (+ network for store crawl); set MOSCRAPER_INTEGRATION_RABBIT=1",
]
